Fix scrolling bug on iOS

--- a/src/styles/components/notes-list.scss
+++ b/src/styles/components/notes-list.scss
@@ -1,9 +1,9 @@
 .notes {
-    height: 100vh;
+    height: calc(100% + 1px);
     margin: 5px auto;
     position: relative;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-    overflow-y: auto;
 
     .create-note {
         padding: 1rem;
